fixed nav ba z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -99,6 +99,7 @@ body {
 
 /* Supporting marketing content */
 .marketing {
+    position: static;
     margin: 40px 0;
 }
 
@@ -235,6 +236,7 @@ section {
     .title h1 {
         margin-top: 10px;
     }
+
     
     .description {
         margin-top: 50px;
